frontend/web/micro-ui-internals/packages/css/src/index.scss
/* ... */
.plumber-details-new-value-wrapper {
  flex: 2 1 auto;
}

.connection-details-new-value-wrapper {
  flex: 1 1 auto;
}

.connection-details-old-value-wrapper,
.plumber-details-old-value-wrapper {
  flex: 1 1 auto;

  .old-value-null-wrapper {
    visibility: hidden;
    padding-bottom: 8px;
    margin-bottom: 8px;
  }

  .row {
    color: #b1b4b6;
    font-weight: 700;
    font-size: 16px;
  }
}

.plumber-details-new-value-wrapper {
  flex: 2 1 auto;
}

.connection-details-new-value-wrapper {
  flex: 1 1 auto;
}

.connection-details-old-value-wrapper,
.plumber-details-old-value-wrapper {
  flex: 1 1 auto;

  .old-value-null-wrapper {
    visibility: hidden;
    padding-bottom: 8px;
    margin-bottom: 8px;
  }

  .row {
    color: #b1b4b6;
    font-weight: 700;
    font-size: 16px;
  }
}

.modal-header-ws {
  padding: 1rem;
  font-weight: 400;
}

.modal-body-ws {
  padding: 1rem;
  font-weight: 700;
  color: theme(colors.text.primary);
  font-size: 24px;
  margin-bottom: 1rem;
}

.privacy-icon {
  cursor: pointer;
}

.privacy-icon:hover {
  path {
    fill: rgba(244, 119, 56, 1);
  }
}

.privacy-icon-2 {
  cursor: pointer;
}

.privacy-icon-2:hover {
  path {
    fill: none;
  }
}

.audit-card {
  width: 80%;
  margin-left: -260px;
  margin-right: -27%;
  max-height: 120px;
  margin-top: 90px;
}

.app-container {
  background: linear-gradient(90deg, #EFF6FF 0%, #FFFFFF 100%) !important;
  margin-bottom: 0 !important;
  min-height: 100vh !important;

}

.digit-inbox-search-composer-header {
  font-size: 14px !important;
  font-weight: 500 !important;
  color: #111827 !important;
  min-width: 270px !important;
}

.digit-search-field-wrapper-input {
  display: flex;
  align-items: center;
  justify-content: center;
}

.digit-search-wrapper {
  background-color: unset !important;
}

.digit-search-button-wrapper-search-icon {
  width: 40px !important;
  height: 40px !important;
  background-color: #006769 !important;
  border-radius: 0 7px 7px 0 !important;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.digit-search-button-wrapper {
  width: fit-content !important;
  height: fit-content !important;
}

.digit-search-field-wrapper {
  row-gap: 0 !important;
  column-gap: 0 !important;

  .digit-employeeCard-input {
    border-radius: 8px 0 0 8px !important;

    @media (min-width: 768px) {
      min-width: 400px !important;
    }

  }
}

.digit-inbox-search-composer-header-action-wrapper {
  justify-content: flex-start !important;
  display: flex;
  align-items: center;
  gap: 24px;
}

.create-application-button {
  color: #FFFFFF !important;
  font-size: 16px !important;
  font-weight: 500 !important;
  border-radius: 12px !important;
  cursor: pointer;
  text-decoration: none !important;
}

.digit-section {
  &.filter {
    border-radius: 12px !important;
    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.16) !important;
  }
}

.icon-refresh {
  width: 40px;
  height: 40px;
  border: 1px solid #EEEEEE;
  border-radius: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  margin-left: auto;
}

.digit-results-table-wrapper {
  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.15);
  height: fit-content !important;
  width: 100%;

  .employee-data-table {
    max-width: 70%;

    .value {
      width: fit-content !important;
      padding: 0 !important;
    }

    h2 {
      width: 50% !important;
    }

    .row {
      gap: 50px !important;
    }
  }

  .h1 {
    font-size: 40px;
  }

  .digit-card-component {
    padding: 0 !important;
  }

  .rdt_TableHeadRow {
    background-color: #EDF1F2 !important;
    border-radius: 12px 12px 0 0
  }

  .rdt_TableCol {
    color: #006769 !important;
    border-right: none !important;
  }

  .rdt_TableCell {
    font-size: 14px !important;
    border: none !important;
  }

  .rdt_Pagination {
    background-color: #EDF1F2 !important;
    border-radius: 0 0 12px 12px !important;
    color: #363636;
    font-size: 16px;
    font-weight: 700;
    border: none !important;
  }

  .rdt_TableRow:hover {
    background-color: #EDF1F2 !important;
  }

  .rdt_TableBody {
    border: 1px solid #D6D5D4
  }

  ;

  .rdt_TableCol_Sortable {
    border-right: 1px solid #787878 !important;
  }

  .digit-card-component {
    border-radius: 12px 12px 12px 12px !important;
    border: 1px solid #EDF1F2 !important;
  }

  .digit-no-data-found {
    min-height: 420px !important;
  }
}

.digit-results-payment-mode-wrapper {
  width: 50%;
  border-radius: 15px;
  background: white;

  @media (max-width:768px) {
    width: 100%;
  }

  .form {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }

  .radio-wrapper {
    display: flex;
    gap: 16px;
  }

  .radio-wrapper-citizen{
    flex-direction: column;
  }

  .input-wrapper {
    display: flex;
    gap: 16px;
  }

  .payment-mode-card {
    padding: 32px 40px;

    .input-label {
      font-size: 18px;
      font-weight: 700;
      color: #0B0C0C !important;
      width: 60%;
      word-break: break-all;
    }

    .star{
      color: #B91900;
      margin-left: 4px;
    }

    .radio-label-wrapper {
      display: flex;
      gap: 16px;
      width: 100%;
    }

    .radio-label {
      font-size: 16px;
      font-weight: 400;
      color: #0B0C0C !important;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 8px;

      input {
        width: 24px;
        height: 24px;
        margin: 0;
      }

      input[type="radio"] {
        accent-color: #006769;
        border: 1px solid #006769;
      }
    }
  }

  .header {
    margin-bottom: 24px;
    text-align: center;
    font-size: 40px;
    font-weight: 700;
    color: #0b0c0c !important;
  }
}

.digit-table-loader {
  min-height: 530px !important;
}
/* ... */

